[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robofinder"
version = "0.1.0"
description = "A tool for finding robots.txt files"
authors = [
    { name = "Spix0r", email = "0xspidey@proton.me" },
    { name = "gnomegl" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "validators",
    "requests==2.32.3"
]

[project.scripts]
robofinder = "robofinder.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["robofinder"]
